feat(search): migrate to OpenAPI v2 client
